--- a/posmotri-v-okno-fd-main/index.html
+++ b/posmotri-v-okno-fd-main/index.html
@@ -14,12 +14,7 @@
     <main class="content">
       <section class="result">
         <div class="result__video-container">
-          <video
-            src="https://v-content.practicum-team.ru/uploads/Belgorod_Noch_a2561725c0.mp4"
-            controls
-            class="result__video"
-            poster="https://v-content.practicum-team.ru/uploads/Belgorod_Noch_mp4_poster_b593de63bb.png"
-          ></video>
+          <video src="" controls class="result__video" poster=""></video>
         </div>
         <form class="search-form">
           <fieldset class="search-form__fieldset">
@@ -107,11 +102,7 @@
               <h2 class="content__video-card-title">Белгород</h2>
               <p class="content__video-card-description">ночной Белгород</p>
             </div>
-            <img
-              src="https://v-content.practicum-team.ru/uploads/Belgorod_Noch_mp4_thumb_8e63aba026.png"
-              alt="ночной Белгород"
-              class="content__video-card-thumbnail"
-            />
+            <img src="" alt="" class="content__video-card-thumbnail" />
           </article>
         </a>
       </li>
